# webcam-smartDet

./: .env.example  .gitignore  ADD_COMMIT_PUSH_GUIDE.md  GIT_GUIDE.md  MODELS_READY.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
config/: settings.py
examples/: README.md  combined_detection_demo.py  compare_versions.py  demo_tools.py  face_detection_demo.py  git_workflow_demo.py  model_performance_test.py  show_usage.py  simple_demo.py  verify_models.py
models/: README.md
src/: __init__.py  camera_handler.py  face_detector.py  object_detector.py  smart_detection_app.py
tests/: test_camera_handler.py
